# progettoai

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
myproject/: predict.py
myproject.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: eda.py  model.py  predict.py  training.py
src/src/: model.py  predict.py  training.py
tests/: test_basic.py  test_training.py  test_utils.py
