[project]
name = "myproject"
version = "0.1.0"
description = "Progetto MLOps per l'esame"
authors = [
    { name="Luigi" }
]
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["myproject"]
exclude = ["tests", "notebooks", "data", "artifacts"]
