[project]
name = "myproject"
version = "0.1.0"
description = "Progetto"
authors = [
    { name = "" }
]
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "notebooks", "data", "artifacts"]

