[project]
name = ""
version = "0.1.0"
description = "Progetto"
authors = [
    { name = "" }
]
requires-python = ">=3.10"
dependencies = [
    "torch==2.2.0",
    "torchvision==0.17.0",
    "numpy==1.26.4",
    "pandas==2.2.0",
    "matplotlib==3.8.2",
    "scikit-learn==1.4.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "notebooks", "data", "artifacts"]


